# serializer version: 1
# name: test_document_as_of
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyUserId': 'admin',
              'value': 'first admin - revision 1',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.1
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyUserId': None,
              'value': 'first anon - revision 3',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_document_as_of.2
  dict({
    'documentAsOf': dict({
      'documentId': '890ca108-d93d-4725-9066-7d0bddad8230',
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalStringAnswer',
              'historyUserId': None,
              'value': 'second anon - revision 4',
            }),
          }),
        ]),
      }),
      'meta': dict({
      }),
    }),
  })
# ---
# name: test_historical_table_answer
  dict({
    'd1': dict({
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalTableAnswer',
              'value': list([
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '~',
                          'value': 'first row value',
                        }),
                      }),
                    ]),
                  }),
                }),
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '~',
                          'value': 'second row value',
                        }),
                      }),
                    ]),
                  }),
                }),
              ]),
            }),
          }),
        ]),
      }),
    }),
    'd2': dict({
      'historicalAnswers': dict({
        'edges': list([
          dict({
            'node': dict({
              '__typename': 'HistoricalTableAnswer',
              'value': list([
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '~',
                          'value': 'first row value',
                        }),
                      }),
                    ]),
                  }),
                }),
                dict({
                  'historicalAnswers': dict({
                    'edges': list([
                      dict({
                        'node': dict({
                          'historyType': '-',
                          'value': 'second row value',
                        }),
                      }),
                    ]),
                  }),
                }),
              ]),
            }),
          }),
        ]),
      }),
    }),
  })
# ---
